se modifican movil responsive en index

--- a/contacto.html
+++ b/contacto.html
@@ -80,8 +80,8 @@
         </div>
 
         
-        <div class="container col-12">
-            <section id="formularioContacto" class="formularioContacto contenido5">
+        <div class="col-12">
+            <section id="formularioContacto" class="formularioContacto">
                 <fieldset>
                     <legend>Formulario de Contacto</legend>
                     <form action="#">
