--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       </div>
     </div>
            
-    <div class="container">            
-        <main class="main">
+    <div class="contenedor">            
+        <main class="main col-12">
             <section class="presentacion">
                 <article>
                   <h2>Por qué usar pañales ecológicos de tela.</h2>                    
