se modifica movil responsive en info y sobre-mi

--- a/informacion.html
+++ b/informacion.html
@@ -94,7 +94,7 @@
                 </section>
             </div>
 
-            <main class="container col-sm-12 col-md-9">
+            <main class="col-sm-12 col-md-9">
                 <section class="informacion">
                     <h2 id="titular" class="display-2">Consejos y Utilidades</h2>
                     <article class="cuidadoPrendas">
