--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Pequeña reseña de como nació ECO-TOMITO. La mamá productora y como se inició en la tela">
         <meta name="keywords" content="PRODUCTORA DE TELA, PAÑALES DE TELA">
+        <link rel="icon" type="image/x-icon" href="img/Eco-Tomito.png" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Poppins:ital,wght@0,400;1,300&family=Roboto+Condensed&display=swap" rel="stylesheet"> 
