se agrega informacion en sobre nosotros

--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -89,10 +89,8 @@
                 </div>
 
                 <article>
-                    <h2>Subtitulo</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, aut, voluptate nobis harum laborum similique ipsum tempora iste laudantium possimus consequuntur quaerat in, qui temporibus dolor cumque eaque. Nesciunt aut qui iusto praesentium accusantium similique quasi deleniti magnam molestiae atque officiis, ut harum ullam totam cupiditate fuga obcaecati voluptatem porro.
-
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis odit rerum inventore, veniam iusto assumenda dolore, ipsa quae dignissimos, ea expedita? Placeat ut quasi fugit doloribus provident laborum dolores quam voluptas architecto at quibusdam dolorum, similique vero? Quibusdam, sequi! Soluta nostrum vero inventore molestias repellendus sit tempora atque ea. Natus.
+                    <h2>Mamá de dos terremotos.</h2>
+                    <p>Hola familias!     Me presento mi nombre es Sofia, tengo 32 años, estoy por recibirme de profesora de Física, carrera que llevo estudiando hace varios años, un poco dilatado por la maternidad. Me encanta la fotografía y el rock,<b> oh yeah!</b>  Soy mamá de dos niñes pequeños, que tienen 2 y 4 años. En un grupo de facebook sobre crianza respetuosa, conocí este maravilloso mundo del pañaleo con tela.A la vez pudimos cambiar aspectos en la cotidianidad y tratar de ser mas amigable con en este transitar por nuestro planeta.  Les doy la bienvenida a este espacio donde van a encontrar todo lo que me ilusiona.Y asi cuidar la piel de nuestros bebes y sobre todo el medio ambiente .💜
                     </p>
                 </article>
             </section>
