se cambia foto de perfil // se alienan textos

--- a/productos.html
+++ b/productos.html
@@ -124,7 +124,7 @@
                 </aside>
             </div>
 
-            <main class="container col-sm-12 col-md-9 productos">
+            <main class="col-sm-12 col-md-9 productos">
                 <section id="pañalesDeTela">
                     <h2 class="tituloAnimado display-2">Pañales de Tela</h2>
                     <div>
