--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -84,8 +84,8 @@
         <main class="col-12">
             <section class="sobreMi">
                 <div>
-                    <h1 class="display-3">Sofii Casiopea</h1>
-                    <img src="img/foto-perfil.svg" alt="foto de perfil">
+                    <h1 class="display-3">Sofi Casiopea</h1>
+                    <img src="img/foto_perfil_creadora.png" alt="foto de perfil">
                 </div>
 
                 <article>
