se agrega container al video de index

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </main>
     </div>
 
-    <div> 
+    <div class="container-fluid"> 
         <video class="videoLoop" src="https://cdn.shopify.com/s/files/1/0278/5791/1879/files/VID_20210113_001938.mp4?v=1617502692" autoplay="autoplay" playsinline="" preload="none" loop="loop" muted="muted">
         </video>
     </div>
