Se arregla z-index de video en el pag ppal

--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="El sitio más ecológico para el bebé y la mamá. Pañales de tela y cuidado personal">
-    <meta name="keywords" content="PAÑALES DE TELA, DIAPER, ECOLOGICO, CAÑAMO, LINERS, BOLSILLO, RECICLABLE, LAVABLE, PAÑALES, ABS, DIAPER CLOTH">
-    <link rel="icon" type="image/x-icon" href="img/Eco-Tomito.png" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Poppins:ital,wght@0,400;1,300&family=Roboto+Condensed&display=swap" rel="stylesheet"> 
-    <title>Eco Tomito - Pañales de Tela</title>
-    <link rel="stylesheet" href="css/estilo.css">
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="El sitio más ecológico para el bebé y la mamá. Pañales de tela y cuidado personal">
+  <meta name="keywords" content="PAÑALES DE TELA, DIAPER, ECOLOGICO, CAÑAMO, LINERS, BOLSILLO, RECICLABLE, LAVABLE, PAÑALES, ABS, DIAPER CLOTH">
+  <meta property="og:title" content="ECO-TOMITO">
+  <meta property="og:image" content="img/Eco-Tomito.png">
+  <meta property="og:url" content="https://www.ecotomito.com.ar/index.html">
+  <link rel="icon" type="image/x-icon" href="img/Eco-Tomito.png" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Poppins:ital,wght@0,400;1,300&family=Roboto+Condensed&display=swap" rel="stylesheet"> 
+  <title>Eco Tomito - Pañales de Tela</title>
+  <link rel="stylesheet" href="css/estilo.css">
 </head>
+
 <body>
     <header title="bebé riendo boca arriba" class="col-12" style="background-image:url('img/portadas/portada-index.png')">
         <h1>ECO TOMITO</h1>
@@ -87,7 +90,7 @@
             <section class="presentacion">
                 <article>
                   <h2>PORQUÉ USAR PAÑALES DE TELA.</h2>                    
-                  <p>La gran mayoría de la familias Argentinas y de todo el mundo, deciden utilizar pañales desechables convencionales hechos de plástico o celulosa, tal vez por la conveniencia de poder descartarlos con facilidad. Sin embargo, si nos preocupa la salud de nuestra madre tierra, deberíamos saber que la "comodidad" de utilizar pañales desechables también tiene consecuencias trágicas para el medioambiente. En Argentina se desechan aproximadamente 364.000 toneladas de pañales descartables, esto equivale a llenar un estadio de fútbol por completo con pañales. Hay distintas alternativas al problema, una sería utilizar pañales biodegradables que se descomponen en 3 o 6 años mientras que los descartables tardan entre 250 y 500 años, o utilizar pañales ecológicos de tela que, sin duda, son la opción más ecológica y respetuosa con el medioambiente ya que pueden reutilizarse sin tener que desecharlos, siendo éstos un pilar fundamental de la crianza natural. </p>
+                  <p>La gran mayoría de las familias Argentinas y de todo el mundo, deciden utilizar pañales desechables convencionales hechos de plástico o celulosa, tal vez por la conveniencia de poder descartarlos con facilidad. Sin embargo, si nos preocupa la salud de nuestra madre tierra, deberíamos saber que la "comodidad" de utilizar pañales desechables también tiene consecuencias trágicas para el medioambiente. En Argentina se desechan aproximadamente 364.000 toneladas de pañales descartables, esto equivale a llenar un estadio de fútbol por completo con pañales. Hay distintas alternativas al problema, una sería utilizar pañales biodegradables que se descomponen en 3 o 6 años mientras que los descartables tardan entre 250 y 500 años, o utilizar pañales ecológicos de tela que, sin duda, son la opción más ecológica y respetuosa con el medioambiente ya que pueden reutilizarse sin tener que desecharlos, siendo éstos un pilar fundamental de la crianza natural. </p>
                   <p>Los pañales ecológicos de tela son percibidos en general como algo arcaico y muy poco prácticos para el tipo de vida actual. No obstante, los pañales de telas actuales distan muchísimo de los pañales que se utilizaban décadas atrás. Los pañales de tela modernos están confeccionados don telas especialmente diseñadas para brindar alta absorción, bajo volumen y mayor confort. Un punto importante a resaltar, es que gracias a la tecnología empleada en las telas utilizadas se a reduce a cero las chances de que los bebés desarrollen la dermatitis del pañal, algo muy frecuente cuando se utilizan pañales descartables. </p>
                   <p>La decisión de reducir el tremendo daño ecológico que producen los pañales descartables al medioambiente, y la vuelta a la crianza natural por parte de las nuevas generaciones, ha hecho de los pañales de tela no solo una opción ecológica y sustentable sin precedentes, sino que además poseen ventajas "evolutivas" superiores a los pañales descartables.</p>
                 </article>
@@ -96,8 +99,8 @@
         </main>
     </div>
 
-    <div class="container-fluid"> 
-        <video class="videoLoop" src="https://cdn.shopify.com/s/files/1/0278/5791/1879/files/VID_20210113_001938.mp4?v=1617502692" autoplay="autoplay" playsinline="" preload="none" loop="loop" muted="muted">
+    <div class="container-fluid video-envivo"> 
+        <video class="videoLoop" src="https://cdn.shopify.com/s/files/1/0278/5791/1879/files/VID_20210113_001938.mp4?v=1617502692" autoplay loop muted>
         </video>
     </div>
 
