--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="keywords" content="PAÑALES DE TELA, DIAPER, ECOLOGICO, CAÑAMO, LINERS, BOLSILLO, RECICLABLE, LAVABLE, PAÑALES, ABS, DIAPER CLOTH">
   <meta property="og:title" content="ECO-TOMITO">
   <meta property="og:image" content="img/Eco-Tomito.png">
+  <meta property="og:description" content="El sitio más ecológico para el bebé y la mamá. Pañales de tela">
   <meta property="og:url" content="https://www.ecotomito.com.ar/index.html">
   <link rel="icon" type="image/x-icon" href="img/Eco-Tomito.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
