--- a/contacto.html
+++ b/contacto.html
@@ -46,7 +46,7 @@
                     <a class="nav-link m-3" href="contacto.html">Contacto</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle m-3" href="" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle m-3" href="productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Productos
                     </a>
                     <ul class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
