se cambia boton de volver arriba de footer por flecha

--- a/contacto.html
+++ b/contacto.html
@@ -129,13 +129,13 @@
         <footer>
             <div class="footer">
               <div>
-                  <h4>Eco-Tomito - Pañales de Tela</h4>
-                  <button type="button" class="boton"><a href="#">volver arriba</a></button>
+                <a href="#" class="boton"><img src="img/arrow_upward.svg" alt="flecha volver"></a>
+                <h4>Eco-Tomito - Pañales de Tela</h4>
               </div>
               <div class="redesSociales">
-                  <a href="http://" target="_blank" rel="noopener noreferrer"><img src="img/face.gif" alt="logo facebook"></a>
-                  <a href="http://" target="_blank" rel="noopener noreferrer"><img src="img/insta.gif" alt="logo instagram"></a>
-                  <a href="http://" target="_blank" rel="noopener noreferrer"><img src="img/mail.gif" alt="logo email"></a>
+                  <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer"><img src="img/face.gif" alt="logo facebook"></a>
+                  <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"><img src="img/insta.gif" alt="logo instagram"></a>
+                  <a href="mailto:email@email.com" target="_blank" rel="noopener noreferrer"><img src="img/mail.gif" alt="logo email"></a>
               </div>
             </div>
             <div class="footer-copyright">
