--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
     <footer>
       <div class="footer">
         <div>
-            <h4>Eco-Tomito - Pañales de Tela</h4>
-            <button type="button" class="boton"><a href="index.html">volver arriba</a></button>
+          <a href="#" class="boton"><img src="img/arrow_upward.svg" alt="flecha volver"></a>
+          <h4>Eco-Tomito - Pañales de Tela</h4>
         </div>
         <div class="redesSociales">
             <a href="http://www.facebook.com" target="_blank" rel="noopener noreferrer"><img src="img/face.gif" alt="logo facebook"></a>
