--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -90,7 +90,7 @@
 
                 <article>
                     <h2>Mamá de dos terremotos.</h2>
-                    <p>Hola familias!     Me presento mi nombre es Sofia, tengo 32 años, estoy por recibirme de profesora de Física, carrera que llevo estudiando hace varios años, un poco dilatado por la maternidad. Me encanta la fotografía y el rock,<b> oh yeah!</b>  Soy mamá de dos niñes pequeños, que tienen 2 y 4 años. En un grupo de facebook sobre crianza respetuosa, conocí este maravilloso mundo del pañaleo con tela.A la vez pudimos cambiar aspectos en la cotidianidad y tratar de ser mas amigable con en este transitar por nuestro planeta.  Les doy la bienvenida a este espacio donde van a encontrar todo lo que me ilusiona.Y asi cuidar la piel de nuestros bebes y sobre todo el medio ambiente .💜
+                    <p>Hola familias!     Me presento mi nombre es Sofia, tengo 32 años, estoy por recibirme de profesora de Física, carrera que llevo estudiando hace varios años, un poco dilatado por la maternidad. Me encanta la fotografía y el rock,<b> oh yeah!</b>  Soy mamá de dos niñes pequeños, que tienen 2 y 4 años. En un grupo de facebook sobre crianza respetuosa, conocí este maravilloso mundo del pañaleo con tela. A la vez pudimos cambiar aspectos en la cotidianidad y tratar de ser mas amigable con en este transitar por nuestro planeta.  Les doy la bienvenida a este espacio donde van a encontrar todo lo que me ilusiona. Y asi cuidar la piel de nuestros bebés y sobre todo el medio ambiente. 💜
                     </p>
                 </article>
             </section>
@@ -100,13 +100,13 @@
         <footer>
             <div class="footer">
               <div>
+                <a href="#" class="boton"><img src="img/arrow_upward.svg" alt="flecha volver"></a>
                   <h4>Eco-Tomito - Pañales de Tela</h4>
-                  <button type="button" class="boton"><a href="#">volver arriba</a></button>
               </div>
               <div class="redesSociales">
-                  <a href="http://" target="_blank" rel="noopener noreferrer"><img src="img/face.gif" alt="logo facebook"></a>
-                  <a href="http://" target="_blank" rel="noopener noreferrer"><img src="img/insta.gif" alt="logo instagram"></a>
-                  <a href="http://" target="_blank" rel="noopener noreferrer"><img src="img/mail.gif" alt="logo email"></a>
+                  <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer"><img src="img/face.gif" alt="logo facebook"></a>
+                  <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"><img src="img/insta.gif" alt="logo instagram"></a>
+                  <a href="mailto:email@email.com" target="_blank" rel="noopener noreferrer"><img src="img/mail.gif" alt="logo email"></a>
               </div>
             </div>
             <div class="footer-copyright">
