--- a/contacto.html
+++ b/contacto.html
@@ -85,7 +85,7 @@
             <section id="formularioContacto" class="formularioContacto">
                 <fieldset>
                     <legend>Formulario de Contacto</legend>
-                    <form action="#">
+                    <form action="envia.php" method="post">
                         <div>
                             <label for="nombre">Completa con tu nombre</label>
                             <input type="text" name="nombre" placeholder="Introduce tu nombre">
