--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Página de contacto de ECO-TOMITO Pañales de tela, puede dejar su comentario y recorrer las preguntas frecuentes.">
         <meta name="keywords" content="CONTACTO, PAÑALES DE TELA, CONTACTAR, PREGUNTAS FRECUENTES">
-        <link rel="icon" type="image/x-icon" href="img/Eco-Tomito.png" />
+        <link rel="icon" type="image/x-icon" href="./img/Eco-Tomito.png" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Poppins:ital,wght@0,400;1,300&family=Roboto+Condensed&display=swap" rel="stylesheet"> 
@@ -85,7 +85,7 @@
             <section id="formularioContacto" class="formularioContacto">
                 <fieldset>
                     <legend>Formulario de Contacto</legend>
-                    <form action="#">
+                    <form action="envia.php" method="post">
                         <div>
                             <label for="nombre">Completa con tu nombre</label>
                             <input type="text" name="nombre" placeholder="Introduce tu nombre">
