Changes apply Ecommerce

--- a/index.html
+++ b/index.html
@@ -50,19 +50,8 @@
               <li class="nav-item">
                 <a class="nav-link m-3" href="contacto.html">Contacto</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle m-3" href="productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Productos
-                </a>
-                <ul class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="productos.html">Todos los Productos</a></li>
-                  <hr>
-                  <li><a class="dropdown-item" href="productos.html#pañalesDeTela">Pañales de Tela</a></li>
-                  <li><a class="dropdown-item" href="productos.html#wetBag">Wet Bag</a></li>
-                  <li><a class="dropdown-item" href="productos.html#calzonesDeTransicion">Calzones de Transición</a></li>
-                  <hr>
-                  <li><a class="dropdown-item" href="productos.html#higieneFemenina">Higiene Femenina</a></li>
-                </ul>
+              <li class="nav-item">
+                <a class="nav-link m-3" href="https://ecotomito-ecommerce.herokuapp.com/">Productos</a>                
               </li>
             </ul>
           </div>
